GNOME Bugzilla – Bug 789494
brasero-disc-recorder: Fix invalid object reference warnings
Last modified: 2017-10-26 11:50:36 UTC
With brasero-disc-recorder enabled, Rhythmbox emits the following warnings in console, when grilo source is selected followed by selecting another source. sys:1: Warning: invalid (NULL) pointer instance sys:1: Warning: g_signal_handlers_disconnect_matched: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed sys:1: Warning: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Created attachment 362294 [details] [review] brasero-disc-recorder: Fix invalid object reference warnings We connect to signals only from query-models in "playlist source" type ( and its inherited types ), so do the same for signal disconnect.
Review of attachment 362294 [details] [review]: pushed as commit fbb6ad7fb