brasero-disc-recorder: Fix invalid object reference warnings

https://bugzilla.gnome.org/show_bug.cgi?id=789494